# backtester

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
scripts/: cross_sectional.py  optimize.py  run_backtest.py  run_multi.py  walkforward.py
src/backtester/cross_sectional/: engine.py  signals.py
src/backtester/data/: ingest.py  store.py  universe.py
src/backtester/engine/: backtest.py  costs.py  multi_ticker.py  portfolio.py
src/backtester/metrics/: performance.py
src/backtester/propfirm/: rules.py
src/backtester/strategy/: base.py  registry.py
src/backtester/strategy/examples/: breakout.py  ma_crossover.py  mean_reversion.py  ml_classifier.py  trend_filtered_pullback.py
src/backtester/viz/: plots.py
tests/: test_backtest.py  test_breakout.py  test_cross_sectional.py  test_data.py  test_mean_reversion.py  test_metrics.py  test_ml_classifier.py  test_multi_ticker.py  test_optimize_cli.py  test_propfirm_rules.py  test_run_backtest_cli.py  test_strategy.py  test_strategy_registry.py  test_trend_filtered_pullback.py  test_universe.py  test_viz.py  test_walkforward_cli.py
